@@ -45,6 +45,15 @@ function suite(name: string, define: () => void): void {
 
 const makeTempDir = () => fs.mkdtempSync(path.join(os.tmpdir(), "weftend-purple-"));
 
+const resolvePowerShellExe = (): string => {
+  const windir = String(process.env?.WINDIR || "").trim();
+  if (windir.length > 0) {
+    const candidate = path.join(windir, "System32", "WindowsPowerShell", "v1.0", "powershell.exe");
+    if (fs.existsSync(candidate)) return candidate;
+  }
+  return "powershell.exe";
+};
+
 const copyDir = (src: string, dst: string) => {
   fs.mkdirSync(dst, { recursive: true });
   const entries = fs.readdirSync(src, { withFileTypes: true });
@@ -60,7 +69,7 @@ const copyDir = (src: string, dst: string) => {
 };
 
 const runWrapper = (targetPath: string, outRoot: string, repoRoot: string) => {
-  const ps = "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe";
+  const ps = resolvePowerShellExe();
   const scriptPath = path.join(process.cwd(), "tools", "windows", "shell", "weftend_safe_run.ps1");
   const args = [
     "-NoProfile",
